--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "vercel-build": "npm run build"
+    "vercel-build": "cd backend && npm install && npx prisma generate && cd .. && npm run build"
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
