Fix: Add /health route to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
   ],
   "routes": [
     {
+      "src": "/health",
+      "dest": "backend/server.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "backend/server.js"
     },
