--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.22.0",
+    "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "framer-motion": "^10.16.4",
@@ -20,19 +21,18 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.294.0",
     "next": "^14.2.0",
+    "postcss": "^8.4.31",
     "prisma": "5.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "eslint-config-next": "^14.2.0"
   }
 }
